# applied-ml-platform

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example_tabular.yaml  example_timeseries.yaml  example_vision.yaml
docker/: api.Dockerfile  train.Dockerfile
docs/: architecture.md
service/: app.py
src/applied_ml_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/features/: timeseries_features.py
src/models/: registry.py
src/training/: train.py  train_timeseries.py
src/utils/: config.py  logging.py  reproducibility.py
src/validation/: timeseries_cv.py
tests/: test_e2e_tabular.py  test_smoke.py
