[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applied-ml-platform"
version = "0.1.0"
description = "Production-style ML system repo supporting mixed modalities (tabular, time-series, vision)."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
  "joblib",
  "fastapi",
  "uvicorn",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
